syntax = "proto3";

service gringotts {
 rpc HeartBeat (HeartBeatRequest) returns (HeartBeatResponse);
}

message HeartBeatRequest {
    
}

message HeartBeatResponse {
}